--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="Develop/assets/css/style.css">
     <title>Horiseon: A better way of marketing</title>
 </head>
 
@@ -27,21 +27,21 @@
     <figure class="middleImage" alt="man leading a team meeting"></figure>
     <section class="content">
         <article id= "search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="journal surrounded by pencil cup coffee and latop" />
+            <img src="Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="journal surrounded by pencil cup coffee and latop" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="hand holding phone in front of a laptop" />
+            <img src="Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="hand holding phone in front of a laptop" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="table full of stickers and thought bubbles" />
+            <img src="Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="table full of stickers and thought bubbles" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <aside class="benefits">
         <figure class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="gear turning in funnel with coin dropping out" />
+            <img src="Develop/assets/images/lead-generation.png" alt="gear turning in funnel with coin dropping out" />
             <figcaption>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </figcaption>
         </figure>
         <figure class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="light bulb in place of head on a body emitting lightwaves" />
+            <img src="Develop/assets/images/brand-awareness.png" alt="light bulb in place of head on a body emitting lightwaves" />
             <figcaption>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </figcaption>
         </figure>
         <figure class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="small gear with coins in front" />
+            <img src="Develop/assets/images/cost-management.png" alt="small gear with coins in front" />
             <figcaption>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </figcaption>
